fix(Shipment Create): alignment fixes (#400)

--- a/member/client/app/routes/shipRequests/create/create.scss
+++ b/member/client/app/routes/shipRequests/create/create.scss
@@ -1,3 +1,6 @@
 .div-b-r{border: 1px solid rgba(146, 156, 165, 0.2) }
 .btn-add-package{background: #fff;  color: #507dbc;  border: 1px solid #507dbc;}
 .btn-request{border-radius: 3px;  border: 1px solid #507dbc;background-color: #507dbc;}
+.bg-color {
+  background-color: #f1f5fa;
+}
